fixed overlap in captions. comment out buttons for carousal causing navbar to not dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
 .carousel-item {
-    overflow: auto;
+    overflow: initial;
 }
+
+.carousel-2 (
+    overflow: visible;
+   width: 100%;
+   height: 53px;
+)
